--- a/ansible/vars_files/ss_modules.yml
+++ b/ansible/vars_files/ss_modules.yml
@@ -3,25 +3,22 @@ ss_modules:
   monitor:
     dir: service/monitor/monitor-application
     build: build
-    lib: monitor-1.0.jar
-    target: /usr/share/xroad/jlib
+    target: /usr/share/xroad/jlib/monitor
+    service: xroad-monitor
   proxy:
     dir: service/proxy/proxy-application
     build: build
-    lib: proxy-1.0.jar
-    target: /usr/share/xroad/jlib
+    target: /usr/share/xroad/jlib/proxy
     service: xroad-proxy
   addon-message-log-archiver:
     dir: service/message-log-archiver/message-log-archiver-application
     build: build
-    lib: messagelog-archiver.jar
-    target: /usr/share/xroad/jlib/addon/proxy
+    target: /usr/share/xroad/jlib/addon/proxy/messagelog-archiver
     service: xroad-addon-messagelog
   configuration-client:
     dir: service/configuration-client/configuration-client-application
     build: build
-    lib: configuration-client-1.0.jar
-    target: /usr/share/xroad/jlib
+    target: /usr/share/xroad/jlib/configuration-client
     service: xroad-confclient
   proxy-ui-api:
     dir: security-server/admin-service/application
