--- a/src/packages/src/xroad/ubuntu/generic/xroad-secret-store-local.service
+++ b/src/packages/src/xroad/ubuntu/generic/xroad-secret-store-local.service
@@ -1,14 +1,12 @@
 [Unit]
-Description=X-Road OpenBao Auto Unseal Service
+Description=X-Road OpenBao Auto Init Service
 After=network.target openbao.service
 Requires=openbao.service
 BindsTo=openbao.service
 
 [Service]
 Type=oneshot
-User=xroad
-Group=xroad
-ExecStart=/usr/share/xroad/scripts/secret-store-unseal.sh
+ExecStart=/usr/share/xroad/scripts/secret-store-init.sh
 RemainAfterExit=yes
 
 [Install]
