chore: backport configurable DatabaseCtx
Refs: XRDDEV-2837

--- a/ansible/roles/xroad-ss/templates/db.properties
+++ b/ansible/roles/xroad-ss/templates/db.properties
@@ -1,3 +1,3 @@
-serverconf.hibernate.connection.url = jdbc:postgresql://{{database_host}}/serverconf
-op-monitor.hibernate.connection.url = jdbc:postgresql://{{database_host}}/op-monitor
-messagelog.hibernate.connection.url = jdbc:postgresql://{{database_host}}/messagelog
+xroad.server-conf.hibernate.connection.url = jdbc:postgresql://{{database_host}}/serverconf
+xroad.op-monitor.hibernate.connection.url = jdbc:postgresql://{{database_host}}/op-monitor
+xroad.message-log.hibernate.connection.url = jdbc:postgresql://{{database_host}}/messagelog
