--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
   config:
     import:
       - classpath:/xroad-common.yaml
+      - optional:file:/etc/xroad/db.properties
       - optional:file:/etc/xroad/conf.d/local.yaml
 
 # TLS
