--- a/src/security-server/admin-service/int-test/src/intTest/resources/container-files/etc/xroad/db.properties
+++ b/src/security-server/admin-service/int-test/src/intTest/resources/container-files/etc/xroad/db.properties
@@ -1,3 +1,3 @@
-serverconf.hibernate.connection.url = jdbc:postgresql://xrd-db:5432/xrd_ss
-serverconf.hibernate.connection.username=xrd
-serverconf.hibernate.connection.password=secret
+xroad.server-conf.hibernate.connection.url = jdbc:postgresql://xrd-db:5432/xrd_ss
+xroad.server-conf.hibernate.connection.username=xrd
+xroad.server-conf.hibernate.connection.password=secret
