--- a/ansible/roles/xroad-ss/templates/db.properties
+++ b/ansible/roles/xroad-ss/templates/db.properties
@@ -1,3 +1,3 @@
-xroad.server-conf.hibernate.connection.url = jdbc:postgresql://{{database_host}}/serverconf
-xroad.op-monitor.hibernate.connection.url = jdbc:postgresql://{{database_host}}/op-monitor
-xroad.message-log.hibernate.connection.url = jdbc:postgresql://{{database_host}}/messagelog
+xroad.db.serverconf.hibernate.connection.url = jdbc:postgresql://{{database_host}}/serverconf
+xroad.db.opmonitor.hibernate.connection.url = jdbc:postgresql://{{database_host}}/op-monitor
+xroad.db.messagelog.hibernate.connection.url = jdbc:postgresql://{{database_host}}/messagelog
