--- a/ansible/vars_files/cs_modules.yml
+++ b/ansible/vars_files/cs_modules.yml
@@ -1,6 +1,6 @@
 ---
 cs_modules:
-  centralserver-admin-service:
+  cs-admin-service:
     dir: central-server/admin-service/application
     build: build
     lib: centralserver-admin-service-1.0.jar
