--- a/ansible/vars_files/ss_modules.yml
+++ b/ansible/vars_files/ss_modules.yml
@@ -6,7 +6,7 @@ ss_modules:
     lib: monitor-1.0.jar
     target: /usr/share/xroad/jlib
   proxy:
-    dir: proxy/application
+    dir: service/proxy/proxy-application
     build: build
     lib: proxy-1.0.jar
     target: /usr/share/xroad/jlib
@@ -32,7 +32,7 @@ ss_modules:
     build: build
     lib: configuration-client-1.0.jar
     target: /usr/share/xroad/jlib
-    service: xroad-configuration-client
+    service: xroad-confclient
   proxy-ui-api:
     dir: security-server/admin-service/application
     build: build
