--- a/src/common/common-properties/src/main/resources/xroad-common.yaml
+++ b/src/common/common-properties/src/main/resources/xroad-common.yaml
@@ -32,6 +32,10 @@ spring:
     http:
       port: 4099
       host-enabled: true
+  xroad:
+    common:
+      global-conf:
+        source: REMOTE
 
 logging:
   level:
