chore: misssing local.yaml in signer-cli

--- a/src/service/signer/signer-cli/src/main/resources/application.yaml
+++ b/src/service/signer/signer-cli/src/main/resources/application.yaml
@@ -9,6 +9,7 @@ quarkus:
 #      enabled: false
   config:
     locations:
+      - /etc/xroad/conf.d/local.yaml
       - xroad-common.yaml
       - xroad-logging.yaml
 
