--- a/src/central-server/admin-service/application/src/main/resources/application.yml
+++ b/src/central-server/admin-service/application/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
         dialect: ee.ria.xroad.common.db.Postgres10FixedImplicitSequenceDialect
   profiles:
     include: nontest
+  config:
+    import:
+      - classpath:/xroad-common.yaml
+      - optional:file:/etc/xroad/conf.d/local.yaml
   jackson:
     default-property-inclusion: NON_NULL
   liquibase:
