feat: Enable gRPC mTLS in Docker (applies transitively to system tests)

--- a/Docker/centralserver/Dockerfile
+++ b/Docker/centralserver/Dockerfile
@@ -25,6 +25,11 @@ ARG REPO=https://artifactory.niis.org/xroad-snapshot-deb
 ARG REPO_KEY=https://artifactory.niis.org/api/gpg/key/public
 ARG COMPONENT=main
 
+# Add X-Road dependencies repo
+ADD ["https://artifactory.niis.org/api/gpg/key/public","/tmp/deps-repokey.gpg"]
+RUN echo "deb https://artifactory.niis.org/xroad-dependencies-deb xroad external" >/etc/apt/sources.list.d/xroad-deps.list \
+  && && apt-key add '/tmp/deps-repokey.gpg' \
+
 ADD ["$REPO_KEY","/tmp/repokey.gpg"]
 ADD ["${REPO}/dists/${DIST}/Release","/tmp/Release"]
 RUN echo "deb $REPO $DIST $COMPONENT" >/etc/apt/sources.list.d/xroad.list \
@@ -41,6 +46,11 @@ RUN echo "deb $REPO $DIST $COMPONENT" >/etc/apt/sources.list.d/xroad.list \
 
 #Xroad CS from internal packages
 FROM base AS centralserver-internal
+
+# Add X-Road dependencies repo
+ADD ["https://artifactory.niis.org/api/gpg/key/public","/tmp/deps-repokey.gpg"]
+RUN echo "deb https://artifactory.niis.org/xroad-dependencies-deb xroad external" >/etc/apt/sources.list.d/xroad-deps.list \
+  && apt-key add '/tmp/deps-repokey.gpg'
 
 RUN --mount=type=bind,source=build/packages,target=/tmp/packages \
    cp -r /tmp/packages /tmp/repo \
