--- a/Docker/centralserver/files/cs-xroad.conf
+++ b/Docker/centralserver/files/cs-xroad.conf
@@ -14,6 +14,14 @@ command=/usr/sbin/nginx -g "daemon off;"
 autorestart=unexpected
 priority=100
 
+[program:openbao]
+command=/usr/bin/bao server -config=/etc/openbao/openbao.hcl
+autorestart=true
+
+[program:xroad-secret-store-local]
+command=/usr/share/xroad/scripts/secret-store-init.sh
+autorestart=unexpected
+
 [program:xroad-center]
 command=/usr/share/xroad/bin/xroad-centralserver-admin-service
 user=xroad
