fix: restart secret store provisioning on SS Docker container only when it quits unexpectedly

--- a/Docker/securityserver/files/ss-xroad.conf
+++ b/Docker/securityserver/files/ss-xroad.conf
@@ -12,7 +12,7 @@ autorestart=true
 
 [program:xroad-secret-store-local]
 command=/usr/share/xroad/scripts/secret-store-init.sh
-autorestart=true
+autorestart=unexpected
 
 [program:xroad-proxy-ui-api]
 command=/usr/share/xroad/bin/xroad-proxy-ui-api
