feat: Enable gRPC mTLS (#2662)
* feat: Enable gRPC mTLS

* feat: Enable gRPC mTLS in Docker (applies transitively to system tests)

* fix: restart secret store provisioning on SS Docker container only when it quits unexpectedly

* fix: broken build resulting from merge

* fix: merge

* chore: Relocate secret-store dependency to xroad-base

--- a/Docker/securityserver/files/ss-xroad.conf
+++ b/Docker/securityserver/files/ss-xroad.conf
@@ -6,6 +6,14 @@ stopwaitsecs=30
 autorestart=unexpected
 priority=100
 
+[program:openbao]
+command=/usr/bin/bao server -config=/etc/openbao/openbao.hcl
+autorestart=true
+
+[program:xroad-secret-store-local]
+command=/usr/share/xroad/scripts/secret-store-init.sh
+autorestart=unexpected
+
 [program:xroad-proxy-ui-api]
 command=/usr/share/xroad/bin/xroad-proxy-ui-api
 user=xroad
