chore: Switch proxy-ui-api to yaml based db property source.
Refs: XRDDEV-2837

--- a/Docker/securityserver/files/etc/xroad/conf.d/local.yaml
+++ b/Docker/securityserver/files/etc/xroad/conf.d/local.yaml
@@ -2,3 +2,10 @@ xroad:
   common:
     global-conf:
       source: REMOTE
+    proxy-ui-api:
+      acme-challenge-port-enabled: true
+    proxy:
+      health-check-port: 5558
+      server-conf-cache-period: 10 #default 60
+    configuration-client:
+      update-interval: 10 #default 60
