--- a/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
+++ b/src/security-server/system-test/src/intTest/resources/container-files/etc/xroad/conf.d/local.yaml
@@ -18,6 +18,13 @@ xroad:
     addon:
       op-monitor:
         enabled: true
+  proxy-ui-api:
+    rate-limit-enabled: true
+    rate-limit-requests-per-second: 100
+    rate-limit-requests-per-minute: 1000
+    acme-challenge-port-enabled: true
+    wsdl-validator-command: /usr/share/xroad/wsdlvalidator/bin/wsdlvalidator_wrapper.sh
+    automatic-activate-acme-sign-certificate: true
   message-log:
     messagelog-encryption-enabled: true
     messagelog-keystore: /etc/xroad/messagelog/messagelog.p12
