fix: Workaround for running Java in docker/VM for Apple M4 & macOS 15.2+ combination

--- a/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
+++ b/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
@@ -56,7 +56,7 @@ apply_local_conf() {
   fi
 }
 
-XROAD_PARAMS="-XX:+UseG1GC -Dfile.encoding=UTF-8 -Xshare:auto -Djdk.tls.ephemeralDHKeySize=2048 \
+XROAD_PARAMS="-XX:UseSVE=0 -XX:+UseG1GC -Dfile.encoding=UTF-8 -Xshare:auto -Djdk.tls.ephemeralDHKeySize=2048 \
 -Djavax.xml.accessExternalDTD=\"\" -Djavax.xml.accessExternalStylesheet=\"\" $XROAD_PARAMS"
 
 # Detect package manager and check for xroad-center
