--- a/ansible/roles/init-lxd/tasks/main.yml
+++ b/ansible/roles/init-lxd/tasks/main.yml
@@ -16,6 +16,9 @@
     wait_for_ipv4_addresses: true
     devices: "{{ hostvars[item].container_ports | default({}) }}"
     timeout: 600
+    config:
+      environment.JDK_JAVA_OPTIONS: "-XX:UseSVE=0"
+      environment.JAVA_TOOL_OPTIONS: "-XX:UseSVE=0"
   tags:
     - ubuntu-container-init
 
@@ -36,6 +39,9 @@
     wait_for_ipv4_addresses: true
     devices: "{{ hostvars[item].container_ports | default({}) }}"
     timeout: 600
+    config:
+      environment.JDK_JAVA_OPTIONS: "-XX:UseSVE=0"
+      environment.JAVA_TOOL_OPTIONS: "-XX:UseSVE=0"
   tags:
     - rhel-container-init
   vars:
