--- a/src/packages/src/xroad/redhat/SOURCES/opmonitor/xroad-opmonitor.service
+++ b/src/packages/src/xroad/redhat/SOURCES/opmonitor/xroad-opmonitor.service
@@ -9,6 +9,8 @@ Wants=xroad-confclient.service
 EnvironmentFile=-/etc/sysconfig/xroad-opmonitor
 User=xroad
 Group=xroad
+Type=notify
+NotifyAccess=all
 ExecStart=/usr/share/xroad/bin/xroad-opmonitor
 Restart=on-failure
 SuccessExitStatus=143
