--- a/src/packages/src/xroad/common/monitor/systemd/xroad-monitor.service
+++ b/src/packages/src/xroad/common/monitor/systemd/xroad-monitor.service
@@ -6,6 +6,8 @@ Requires=xroad-base.service
 [Service]
 User=xroad
 Group=xroad
+Type=notify
+NotifyAccess=all
 ExecStart=/usr/share/xroad/bin/xroad-monitor
 Restart=on-failure
 SuccessExitStatus=143
