--- a/src/packages/src/xroad/redhat/SOURCES/proxy/xroad-proxy.service
+++ b/src/packages/src/xroad/redhat/SOURCES/proxy/xroad-proxy.service
@@ -10,6 +10,8 @@ EnvironmentFile=-/etc/sysconfig/xroad-proxy
 AmbientCapabilities=CAP_NET_BIND_SERVICE
 User=xroad
 Group=xroad
+Type=notify
+NotifyAccess=all
 ExecStart=/usr/share/xroad/bin/xroad-proxy
 Restart=on-failure
 SuccessExitStatus=143
