--- a/src/packages/src/xroad/ubuntu/generic/xroad-addon-messagelog.service
+++ b/src/packages/src/xroad/ubuntu/generic/xroad-addon-messagelog.service
@@ -8,6 +8,8 @@ ConditionPathExists=/usr/share/xroad/jlib/addon/proxy/messagelog.conf
 [Service]
 User=xroad
 Group=xroad
+Type=notify
+NotifyAccess=all
 Nice=1
 ExecStart=/usr/share/xroad/bin/xroad-messagelog-archiver
 Restart=on-failure
