--- a/src/packages/src/xroad/ubuntu/generic/xroad-confclient.service
+++ b/src/packages/src/xroad/ubuntu/generic/xroad-confclient.service
@@ -6,6 +6,8 @@ Requires=xroad-base.service
 [Service]
 User=xroad
 Group=xroad
+Type=notify
+NotifyAccess=all
 ExecStart=/usr/share/xroad/bin/xroad-confclient
 Restart=on-failure
 SuccessExitStatus=143
