--- a/src/packages/src/xroad/ubuntu/generic/xroad-opmonitor.service
+++ b/src/packages/src/xroad/ubuntu/generic/xroad-opmonitor.service
@@ -8,6 +8,8 @@ Wants=xroad-confclient.service
 [Service]
 User=xroad
 Group=xroad
+Type=notify
+NotifyAccess=all
 ExecStart=/usr/share/xroad/bin/xroad-opmonitor
 Restart=on-failure
 SuccessExitStatus=143
