--- a/src/packages/src/xroad/ubuntu/generic/xroad-proxy.service
+++ b/src/packages/src/xroad/ubuntu/generic/xroad-proxy.service
@@ -10,6 +10,8 @@ AmbientCapabilities=CAP_NET_BIND_SERVICE
 TasksMax=infinity
 User=xroad
 Group=xroad
+Type=notify
+NotifyAccess=all
 ExecStart=/usr/share/xroad/bin/xroad-proxy
 Restart=on-failure
 SuccessExitStatus=143
