--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -123,7 +123,10 @@ spring:
       on-profile: containerized
 logging:
   config: classpath:logback-containerized.xml
-
+xroad:
+  common:
+    global-conf:
+      source: REMOTE
 ---
 spring:
   config:
