--- a/src/security-server/admin-service/application/src/main/resources/application.yml
+++ b/src/security-server/admin-service/application/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     password: ${xroad.db.serverconf.hibernate.connection.password}
     hikari:
       data-source-properties:
-        currentSchema: ${xroad.db.serverconf.hibernate.hikari.dataSource.currentSchema}
+        currentSchema: ${xroad.db.serverconf.hibernate.hikari.dataSource.currentSchema:public}
   jpa:
     mapping-resources: identifiers.orm.xml,serverconf.orm.xml
     open-in-view: false
