--- a/deployment/security-server/docker/base/Dockerfile-baseline
+++ b/deployment/security-server/docker/base/Dockerfile-baseline
@@ -8,11 +8,13 @@ RUN groupadd --system --gid 999 xroad && \
     --gid xroad xroad
 
 RUN mkdir /var/log/xroad && \
-    mkdir /var/tmp/xroad/ && \
+    mkdir /var/tmp/xroad && \
+    mkdir /var/cache/xroad && \
 #    mkdir /opt/app/cache && \
     mkdir -p /etc/xroad/ssl && \
     mkdir -p /etc/xroad/globalconf && \
 #    chown -R xroad:xroad /optapp && \
     chown -R xroad:xroad /var/log/xroad && \
-    chown -R xroad:xroad /var/tmp/xroad/ && \
+    chown -R xroad:xroad /var/tmp/xroad && \
+    chown -R xroad:xroad /var/cache/xroad && \
     chown -R xroad:xroad /etc/xroad
