--- a/deployment/security-server/docker/compose.yaml
+++ b/deployment/security-server/docker/compose.yaml
@@ -80,9 +80,6 @@ services:
     networks:
       - xrd-ss-network
       - xroad-network
-    #    depends_on:
-    #      config:
-    #        condition: service_healthy
     deploy:
       resources:
         reservations:
@@ -130,8 +127,6 @@ services:
     depends_on:
       db-serverconf-init:
         condition: service_completed_successfully
-      #      config:
-      #        condition: service_healthy
       configuration-client:
         condition: service_healthy
     deploy:
@@ -146,7 +141,6 @@ services:
     environment:
       - XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST=configuration-client
       - XROAD_COMMON_RPC_CHANNEL_SIGNER_HOST=signer
-#      - XROAD_COMMON_RPC_CHANNEL_PROXY_HOST=proxy
       - XROAD_DB_MESSAGELOG_HIBERNATE_CONNECTION_URL=jdbc:postgresql://db-messagelog:5432/messagelog
       - XROAD_DB_MESSAGELOG_HIBERNATE_CONNECTION_DRIVER_CLASS=org.postgresql.Driver
       - XROAD_DB_MESSAGELOG_HIBERNATE_CONNECTION_USERNAME=messagelog
@@ -168,7 +162,7 @@ services:
       signer:
         condition: service_healthy
     ports:
-      - "9999:9999"
+      - "0:9999" # debug port
     deploy:
       resources:
         reservations:
@@ -187,12 +181,13 @@ services:
       - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_DRIVER_CLASS=org.postgresql.Driver
       - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_USERNAME=serverconf
       - XROAD_DB_SERVERCONF_HIBERNATE_CONNECTION_PASSWORD=secret
+      - XROAD_PROXY_UI_API_SECURITY_SERVER_URL=http://proxy:8080 #todo use https?
 #    volumes:
 #      - ./temp-mount-xroad:/etc/xroad
 #      - ./temp-scripts:/usr/share/xroad/scripts
     ports:
-      - "4700:4000" # Frontend
-      - "4790:9999" # debug port
+      - "0:4000" # Frontend
+      - "0:9999" # debug port
     healthcheck:
       interval: 5s
       retries: 40
