--- a/development/hurl/scenarios/vars.env
+++ b/development/hurl/scenarios/vars.env
@@ -2,7 +2,8 @@ cs_host=cs
 ca_host=testca
 ss0_host=ss0
 ss1_host=ss1
-ss2_host=ss2
+ss0_proxy=localhost
+ss1_proxy=localhost
 example_service_wsdl=http://issoap:8080/example-adapter/Endpoint?wsdl
 example_service_address=http://issoap:8080/example-adapter/Endpoint
 
