--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -112,6 +112,13 @@ jobs:
       - name: Save docker images from registry
         run: |
           mkdir -p /tmp/docker-images
+          docker pull localhost:5000/ss-configuration-client:latest
+          docker pull localhost:5000/ss-proxy:latest
+          docker pull localhost:5000/ss-signer:latest
+          docker pull localhost:5000/ss-proxy-ui-api:latest
+          docker pull localhost:5000/ss-db-serverconf-init:latest
+          docker pull localhost:5000/ss-db-messagelog-init:latest
+
           docker save -o /tmp/docker-images/ss-configuration-client.tar localhost:5000/ss-configuration-client:latest
           docker save -o /tmp/docker-images/ss-proxy.tar localhost:5000/ss-proxy:latest
           docker save -o /tmp/docker-images/ss-signer.tar localhost:5000/ss-signer:latest
