--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -111,7 +111,7 @@ jobs:
           compression-level: 0 #No point in compressing these
       - name: Save docker images from registry
         run: |
-          mkdir -p /tmp/docker-images
+          mkdir -p ${{ runner.temp }}/docker-images
           docker pull localhost:5000/ss-configuration-client:latest
           docker pull localhost:5000/ss-proxy:latest
           docker pull localhost:5000/ss-signer:latest
@@ -119,17 +119,17 @@ jobs:
           docker pull localhost:5000/ss-db-serverconf-init:latest
           docker pull localhost:5000/ss-db-messagelog-init:latest
 
-          docker save -o /tmp/docker-images/ss-configuration-client.tar localhost:5000/ss-configuration-client:latest
-          docker save -o /tmp/docker-images/ss-proxy.tar localhost:5000/ss-proxy:latest
-          docker save -o /tmp/docker-images/ss-signer.tar localhost:5000/ss-signer:latest
-          docker save -o /tmp/docker-images/ss-proxy-ui-api.tar localhost:5000/ss-proxy-ui-api:latest
-          docker save -o /tmp/docker-images/ss-db-serverconf-init localhost:5000/ss-db-serverconf-init:latest
-          docker save -o /tmp/docker-images/ss-db-messagelog-init localhost:5000/ss-db-messagelog-init:latest
+          docker save -o ${{ runner.temp }}/docker-images/ss-configuration-client.tar localhost:5000/ss-configuration-client:latest
+          docker save -o ${{ runner.temp }}/docker-images/ss-proxy.tar localhost:5000/ss-proxy:latest
+          docker save -o ${{ runner.temp }}/docker-images/ss-signer.tar localhost:5000/ss-signer:latest
+          docker save -o ${{ runner.temp }}/docker-images/ss-proxy-ui-api.tar localhost:5000/ss-proxy-ui-api:latest
+          docker save -o ${{ runner.temp }}/docker-images/ss-db-serverconf-init localhost:5000/ss-db-serverconf-init:latest
+          docker save -o ${{ runner.temp }}/docker-images/ss-db-messagelog-init localhost:5000/ss-db-messagelog-init:latest
       - name: Store docker images for other jobs
         uses: actions/upload-artifact@v4
         with:
           name: docker-images
-          path: /tmp/docker-images
+          path: ${{ runner.temp }}/docker-images
   RunCSSystemTests:
     name: Run Central Server system tests
     needs: BuildAndPackageWithUnitTests
@@ -322,10 +322,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: docker-images
-          path: /tmp/docker-images
+          path: ${{ runner.temp }}/docker-images
       - name: Load SS docker images into registry
         run: |
-          for tar in /tmp/docker-images/*.tar; do
+          for tar in ${{ runner.temp }}/docker-images/*.tar; do
             echo "Processing $tar..."
             docker load -i "$tar"
           done
