chore: Utilize OpenBao provided PKI for remaining "internal" TLS connections

--- a/src/central-server/admin-service/application/src/test/resources/application-test.yml
+++ b/src/central-server/admin-service/application/src/test/resources/application-test.yml
@@ -1,4 +1,9 @@
 ---
+xroad:
+  common:
+    rpc:
+      use-tls: false
+
 debug: true
 logging:
   config: classpath:centralserver-admin-service-test-logback.xml
