--- a/src/security-server/admin-service/application/src/test/resources/application-test.yml
+++ b/src/security-server/admin-service/application/src/test/resources/application-test.yml
@@ -37,3 +37,6 @@ xroad:
         jdbc:
           use_streams_for_binary: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
+  common:
+    rpc:
+      use-tls: false
