chore: script fix
Refs: XRDDEV-2837

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -332,7 +332,7 @@ jobs:
       # Execute and report
       - name: Run E2E tests
         working-directory: ./src
-        run: >
+        run: |
           mv -f ../deployment/security-server/docker/.env.github ../deployment/security-server/docker/.env
           ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :security-server:e2e-test:e2eTest 
           -Pe2eTestCSImage=localhost:5000/xrd-centralserver:${{ github.sha }} 
