--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -115,6 +115,7 @@ jobs:
           docker pull localhost:5000/ss-configuration-client:latest
           docker pull localhost:5000/ss-proxy:latest
           docker pull localhost:5000/ss-signer:latest
+          docker pull localhost:5000/ss-monitor:latest
           docker pull localhost:5000/ss-proxy-ui-api:latest
           docker pull localhost:5000/ss-db-serverconf-init:latest
           docker pull localhost:5000/ss-db-messagelog-init:latest
@@ -122,6 +123,7 @@ jobs:
           docker save -o ${{ runner.temp }}/docker-images/ss-configuration-client.tar localhost:5000/ss-configuration-client:latest
           docker save -o ${{ runner.temp }}/docker-images/ss-proxy.tar localhost:5000/ss-proxy:latest
           docker save -o ${{ runner.temp }}/docker-images/ss-signer.tar localhost:5000/ss-signer:latest
+          docker save -o ${{ runner.temp }}/docker-images/ss-monitor.tar localhost:5000/ss-monitor:latest
           docker save -o ${{ runner.temp }}/docker-images/ss-proxy-ui-api.tar localhost:5000/ss-proxy-ui-api:latest
           docker save -o ${{ runner.temp }}/docker-images/ss-db-serverconf-init localhost:5000/ss-db-serverconf-init:latest
           docker save -o ${{ runner.temp }}/docker-images/ss-db-messagelog-init localhost:5000/ss-db-messagelog-init:latest
