--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -89,20 +89,20 @@ jobs:
           reporter: java-junit
           list-suites: 'failed'
           list-tests: 'failed'
-      - name: Build RHEL8 packages
-        run: docker build -t rhel8 ${{ github.workspace }}/src/packages/docker/rpm-el8/ && docker run --rm -u $(id -u ${USER}):$(id -g ${USER}) -v /etc/passwd:/etc/passwd:ro -v /etc/group:/etc/group:ro -v ${{ github.workspace }}:/workspace rhel8 ./src/packages/build-rpm.sh
-      - name: Build RHEL9 packages
-        run: docker build -t rhel9 ${{ github.workspace }}/src/packages/docker/rpm-el9/ && docker run --rm -u $(id -u ${USER}):$(id -g ${USER}) -v /etc/passwd:/etc/passwd:ro -v /etc/group:/etc/group:ro -v ${{ github.workspace }}:/workspace rhel9 ./src/packages/build-rpm.sh
+#      - name: Build RHEL8 packages
+#        run: docker build -t rhel8 ${{ github.workspace }}/src/packages/docker/rpm-el8/ && docker run --rm -u $(id -u ${USER}):$(id -g ${USER}) -v /etc/passwd:/etc/passwd:ro -v /etc/group:/etc/group:ro -v ${{ github.workspace }}:/workspace rhel8 ./src/packages/build-rpm.sh
+#      - name: Build RHEL9 packages
+#        run: docker build -t rhel9 ${{ github.workspace }}/src/packages/docker/rpm-el9/ && docker run --rm -u $(id -u ${USER}):$(id -g ${USER}) -v /etc/passwd:/etc/passwd:ro -v /etc/group:/etc/group:ro -v ${{ github.workspace }}:/workspace rhel9 ./src/packages/build-rpm.sh
       - name: Build 22.04 (Jammy) packages
         env:
           DEBEMAIL: 'info@niis.org'
           DEBFULLNAME: 'NIIS'
         run: ./src/packages/build-deb.sh jammy -release
-      - name: Build 24.04 (Noble) packages
-        env:
-          DEBEMAIL: 'info@niis.org'
-          DEBFULLNAME: 'NIIS'
-        run: ./src/packages/build-deb.sh noble -release
+#      - name: Build 24.04 (Noble) packages
+#        env:
+#          DEBEMAIL: 'info@niis.org'
+#          DEBFULLNAME: 'NIIS'
+#        run: ./src/packages/build-deb.sh noble -release
       - name: Store deb files for system tests
         uses: actions/upload-artifact@v4
         with:
@@ -132,138 +132,138 @@ jobs:
         with:
           name: docker-images
           path: ${{ runner.temp }}/docker-images
-  RunCSSystemTests:
-    name: Run Central Server system tests
-    needs: BuildAndPackageWithUnitTests
-    runs-on: ubuntu-22.04
-    services:
-      registry:
-        image: registry:2
-        ports:
-          - 5000:5000
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-      - name: Set up Gradle
-        uses: gradle/actions/setup-gradle@v4
-        with:
-          cache-read-only: true
-      - name: Initialize docker setup
-        working-directory: ./Docker/centralserver
-        run: ./init_context.sh
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          driver-opts: network=host
-      - name: Download debian packages
-        uses: actions/download-artifact@v4
-        with:
-          name: debian-packages
-          path: ./Docker/centralserver/build/packages/
-      - name: List docker build files
-        run: ls -lah ./Docker/centralserver/build
-      - name: Build CS docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: ./Docker/centralserver/
-          push: true
-          build-args: |
-            PACKAGE_SOURCE=internal
-          tags: localhost:5000/xrd-centralserver:${{ github.sha }}
-      - name: Run Central Server system tests
-        working-directory: ./src
-        run: ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :central-server:admin-service:ui-system-test:systemTest -PsystemTestCsImageName=localhost:5000/xrd-centralserver:${{ github.sha }}
-      - name: Test report
-        env:
-          NODE_OPTIONS: '--max-old-space-size=6144'
-        uses: dorny/test-reporter@v1
-        if: success() || failure()
-        with:
-          name: Central Server system test
-          path: src/central-server/admin-service/ui-system-test/build/test-results/**/TEST-*.xml
-          reporter: java-junit
-      - name: Upload CS screenshots
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: CS System Test screenshots
-          path: src/central-server/admin-service/ui-system-test/build/reports/test-automation/selenide-failures/*.png
-      - name: Upload CS report
-        uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: SS System Test report
-          path: |
-            src/central-server/admin-service/ui-system-test/build/allure-report/
-  RunSSSystemTests:
-    name: Run Security Server system tests
-    needs: BuildAndPackageWithUnitTests
-    runs-on: ubuntu-22.04
-    services:
-      registry:
-        image: registry:2
-        ports:
-          - 5000:5000
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-      - name: Set up Gradle
-        uses: gradle/actions/setup-gradle@v4
-        with:
-          cache-read-only: true
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          driver-opts: network=host
-      - name: Initialize docker setup
-        working-directory: ./Docker/securityserver
-        run: ./init_context.sh
-      - name: Download debian packages
-        uses: actions/download-artifact@v4
-        with:
-          name: debian-packages
-          path: ./Docker/securityserver/build/packages/
-      - name: Build SS docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: ./Docker/securityserver/
-          push: true
-          build-args: |
-            PACKAGE_SOURCE=internal
-          tags: localhost:5000/xrd-securityserver:${{ github.sha }}
-      - name: Run Security Server system tests
-        working-directory: ./src
-        run: ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :security-server:system-test:systemTest -PsystemTestSsImageName=localhost:5000/xrd-securityserver:${{ github.sha }}
-      - name: Test report
-        env:
-          NODE_OPTIONS: '--max-old-space-size=6144'
-        uses: dorny/test-reporter@v1
-        if: success() || failure()
-        with:
-          name: Security Server system tests
-          path: src/security-server/system-test/build/test-results/**/TEST-*.xml
-          reporter: java-junit
-      - name: Fix system-test build dir permissions
-        run: sudo chown -R $USER src/security-server/system-test/build/ss-container-logs/ && sudo chown -R $USER src/security-server/system-test/build/ca-container-logs/
-        if: failure()
-      - name: Upload SS report
-        uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: SS System Test report
-          path: |
-            src/security-server/system-test/build/allure-report/
-            src/security-server/system-test/build/ss-container-logs/
-            src/security-server/system-test/build/ca-container-logs/
-            src/security-server/system-test/build/reports/test-automation/selenide-failures/*.png
+#  RunCSSystemTests:
+#    name: Run Central Server system tests
+#    needs: BuildAndPackageWithUnitTests
+#    runs-on: ubuntu-22.04
+#    services:
+#      registry:
+#        image: registry:2
+#        ports:
+#          - 5000:5000
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: Set up JDK 21
+#        uses: actions/setup-java@v4
+#        with:
+#          java-version: '21'
+#          distribution: 'temurin'
+#      - name: Set up Gradle
+#        uses: gradle/actions/setup-gradle@v4
+#        with:
+#          cache-read-only: true
+#      - name: Initialize docker setup
+#        working-directory: ./Docker/centralserver
+#        run: ./init_context.sh
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v3
+#        with:
+#          driver-opts: network=host
+#      - name: Download debian packages
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: debian-packages
+#          path: ./Docker/centralserver/build/packages/
+#      - name: List docker build files
+#        run: ls -lah ./Docker/centralserver/build
+#      - name: Build CS docker image
+#        uses: docker/build-push-action@v6
+#        with:
+#          context: ./Docker/centralserver/
+#          push: true
+#          build-args: |
+#            PACKAGE_SOURCE=internal
+#          tags: localhost:5000/xrd-centralserver:${{ github.sha }}
+#      - name: Run Central Server system tests
+#        working-directory: ./src
+#        run: ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :central-server:admin-service:ui-system-test:systemTest -PsystemTestCsImageName=localhost:5000/xrd-centralserver:${{ github.sha }}
+#      - name: Test report
+#        env:
+#          NODE_OPTIONS: '--max-old-space-size=6144'
+#        uses: dorny/test-reporter@v1
+#        if: success() || failure()
+#        with:
+#          name: Central Server system test
+#          path: src/central-server/admin-service/ui-system-test/build/test-results/**/TEST-*.xml
+#          reporter: java-junit
+#      - name: Upload CS screenshots
+#        if: failure()
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: CS System Test screenshots
+#          path: src/central-server/admin-service/ui-system-test/build/reports/test-automation/selenide-failures/*.png
+#      - name: Upload CS report
+#        uses: actions/upload-artifact@v4
+#        if: failure()
+#        with:
+#          name: SS System Test report
+#          path: |
+#            src/central-server/admin-service/ui-system-test/build/allure-report/
+#  RunSSSystemTests:
+#    name: Run Security Server system tests
+#    needs: BuildAndPackageWithUnitTests
+#    runs-on: ubuntu-22.04
+#    services:
+#      registry:
+#        image: registry:2
+#        ports:
+#          - 5000:5000
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: Set up JDK 21
+#        uses: actions/setup-java@v4
+#        with:
+#          java-version: '21'
+#          distribution: 'temurin'
+#      - name: Set up Gradle
+#        uses: gradle/actions/setup-gradle@v4
+#        with:
+#          cache-read-only: true
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v3
+#        with:
+#          driver-opts: network=host
+#      - name: Initialize docker setup
+#        working-directory: ./Docker/securityserver
+#        run: ./init_context.sh
+#      - name: Download debian packages
+#        uses: actions/download-artifact@v4
+#        with:
+#          name: debian-packages
+#          path: ./Docker/securityserver/build/packages/
+#      - name: Build SS docker image
+#        uses: docker/build-push-action@v6
+#        with:
+#          context: ./Docker/securityserver/
+#          push: true
+#          build-args: |
+#            PACKAGE_SOURCE=internal
+#          tags: localhost:5000/xrd-securityserver:${{ github.sha }}
+#      - name: Run Security Server system tests
+#        working-directory: ./src
+#        run: ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :security-server:system-test:systemTest -PsystemTestSsImageName=localhost:5000/xrd-securityserver:${{ github.sha }}
+#      - name: Test report
+#        env:
+#          NODE_OPTIONS: '--max-old-space-size=6144'
+#        uses: dorny/test-reporter@v1
+#        if: success() || failure()
+#        with:
+#          name: Security Server system tests
+#          path: src/security-server/system-test/build/test-results/**/TEST-*.xml
+#          reporter: java-junit
+#      - name: Fix system-test build dir permissions
+#        run: sudo chown -R $USER src/security-server/system-test/build/ss-container-logs/ && sudo chown -R $USER src/security-server/system-test/build/ca-container-logs/
+#        if: failure()
+#      - name: Upload SS report
+#        uses: actions/upload-artifact@v4
+#        if: failure()
+#        with:
+#          name: SS System Test report
+#          path: |
+#            src/security-server/system-test/build/allure-report/
+#            src/security-server/system-test/build/ss-container-logs/
+#            src/security-server/system-test/build/ca-container-logs/
+#            src/security-server/system-test/build/reports/test-automation/selenide-failures/*.png
   RunE2ETests:
     name: Run E2E tests
     needs: BuildAndPackageWithUnitTests
