--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -125,8 +125,8 @@ jobs:
           docker save -o ${{ runner.temp }}/docker-images/ss-signer.tar localhost:5000/ss-signer:latest
           docker save -o ${{ runner.temp }}/docker-images/ss-monitor.tar localhost:5000/ss-monitor:latest
           docker save -o ${{ runner.temp }}/docker-images/ss-proxy-ui-api.tar localhost:5000/ss-proxy-ui-api:latest
-          docker save -o ${{ runner.temp }}/docker-images/ss-db-serverconf-init localhost:5000/ss-db-serverconf-init:latest
-          docker save -o ${{ runner.temp }}/docker-images/ss-db-messagelog-init localhost:5000/ss-db-messagelog-init:latest
+          docker save -o ${{ runner.temp }}/docker-images/ss-db-serverconf-init.tar localhost:5000/ss-db-serverconf-init:latest
+          docker save -o ${{ runner.temp }}/docker-images/ss-db-messagelog-init.tar localhost:5000/ss-db-messagelog-init:latest
       - name: Store docker images for other jobs
         uses: actions/upload-artifact@v4
         with:
