chore: minor fix
Refs: XRDDEV-2837

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -337,6 +337,7 @@ jobs:
         working-directory: ./src
         run: |
           mv -f ../deployment/security-server/docker/.env.github ../deployment/security-server/docker/.env
+          docker network create xroad-network
           ./gradlew -Dorg.gradle.jvmargs=-Xmx1g :security-server:e2e-test:e2eTest 
           -Pe2eTestCSImage=localhost:5000/xrd-centralserver:${{ github.sha }} 
 #          -Pe2eTestSSImage=localhost:5000/xrd-securityserver:${{ github.sha }}
