chore: openbao container in e2e tests
Refs: XRDDEV-2837

--- a/deployment/security-server/docker/.env
+++ b/deployment/security-server/docker/.env
@@ -6,3 +6,5 @@ MONITOR_IMG=localhost:5555/ss-monitor:latest
 
 SERVERCONF_INIT_IMG=localhost:5555/ss-db-serverconf-init:latest
 MESSAGELOG_INIT_IMG=localhost:5555/ss-db-messagelog-init:latest
+
+XROAD_SECRET_STORE_TOKEN=bao-root-token
