--- a/deployment/security-server/docker/.env.github
+++ b/deployment/security-server/docker/.env.github
@@ -6,3 +6,5 @@ MONITOR_IMG=localhost:5000/ss-monitor:latest
 
 SERVERCONF_INIT_IMG=localhost:5000/ss-db-serverconf-init:latest
 MESSAGELOG_INIT_IMG=localhost:5000/ss-db-messagelog-init:latest
+
+XROAD_SECRET_STORE_TOKEN=bao-root-token
