--- a/deployment/security-server/docker/compose.yaml
+++ b/deployment/security-server/docker/compose.yaml
@@ -1,4 +1,18 @@
 services:
+  openbao:
+    build:
+      context: ../docker/openbao
+    environment:
+      - BAO_ADDR=http://0.0.0.0:8200
+      - BAO_DEV_ROOT_TOKEN_ID=${XROAD_SECRET_STORE_TOKEN}
+    healthcheck:
+      interval: 5s
+      retries: 40
+      test: ["CMD", "sh", "-c", "bao secrets list -format=json | jq 'has(\"xrd-pki/\")' | grep -q true"]
+    networks:
+      - xrd-ss-network
+    volumes:
+      - ../../../src/packages/src/xroad/common/xroad-secret-store-local/usr/share/xroad/scripts/:/scripts
   db-serverconf:
     image: postgres:17
     environment:
@@ -68,7 +82,9 @@ services:
     image: ${CONFIGURATION_CLIENT_IMG}
     pull_policy: always
     environment:
-      - XROAD_HOST=confclient
+      - XROAD_HOST=configuration-client
+      - XROAD_SECRET_STORE_HOST=openbao
+      - XROAD_SECRET_STORE_TOKEN=${XROAD_SECRET_STORE_TOKEN}
     healthcheck:
       interval: 5s
       retries: 40
@@ -82,11 +98,16 @@ services:
           memory: 64M
         limits:
           memory: 320M
+    depends_on:
+      openbao:
+        condition: service_healthy
   monitor:
     image: ${MONITOR_IMG}
     pull_policy: always
     environment:
       - XROAD_HOST=monitor
+      - XROAD_SECRET_STORE_HOST=openbao
+      - XROAD_SECRET_STORE_TOKEN=${XROAD_SECRET_STORE_TOKEN}
       - XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST=configuration-client
       - XROAD_COMMON_RPC_CHANNEL_SIGNER_HOST=signer
       - XROAD_COMMON_RPC_CHANNEL_PROXY_HOST=proxy
@@ -112,6 +133,9 @@ services:
     image: ${SIGNER_IMG}
     pull_policy: always
     environment:
+      - XROAD_HOST=signer
+      - XROAD_SECRET_STORE_HOST=openbao
+      - XROAD_SECRET_STORE_TOKEN=${XROAD_SECRET_STORE_TOKEN}
       - XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST=configuration-client
     healthcheck:
       interval: 5s
@@ -135,6 +159,9 @@ services:
     image: ${PROXY_IMG}
     pull_policy: always
     environment:
+      - XROAD_HOST=proxy
+      - XROAD_SECRET_STORE_HOST=openbao
+      - XROAD_SECRET_STORE_TOKEN=${XROAD_SECRET_STORE_TOKEN}
       - XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST=configuration-client
       - XROAD_COMMON_RPC_CHANNEL_SIGNER_HOST=signer
       - XROAD_DB_MESSAGELOG_HIBERNATE_CONNECTION_URL=jdbc:postgresql://db-messagelog:5432/messagelog
@@ -169,6 +196,10 @@ services:
     image: ${PROXY_UI_IMG}
     pull_policy: always
     environment:
+      - XROAD_HOST=ui
+      - XROAD_SECRET_STORE_HOST=openbao
+      - XROAD_SECRET_STORE_TOKEN=${XROAD_SECRET_STORE_TOKEN}
+      - XROAD_SECRET_STORE_SCHEME=http
       - XROAD_COMMON_RPC_CHANNEL_CONFIGURATION_CLIENT_HOST=configuration-client
       - XROAD_COMMON_RPC_CHANNEL_SIGNER_HOST=signer
       - XROAD_COMMON_RPC_CHANNEL_PROXY_HOST=proxy
